basic basket and discounts implementation

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "ACME JavaScript Test",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/.bin/mocha --reporter spec"
   },
   "repository": {
     "type": "git",
@@ -19,5 +19,9 @@
   "bugs": {
     "url": "https://github.com/ag-digital/acme-supermarket-test/issues"
   },
-  "homepage": "https://github.com/ag-digital/acme-supermarket-test#readme"
+  "homepage": "https://github.com/ag-digital/acme-supermarket-test#readme",
+  "dependencies": {
+    "chai": "^4.1.2",
+    "mocha": "^4.0.1"
+  }
 }
